--- a/triggers/npm/event-listner.yaml
+++ b/triggers/npm/event-listner.yaml
@@ -7,7 +7,7 @@ spec:
   triggers:
     - name: github-trigger
       bindings:
-        - ref: build-and-push-trigger-binding
+        - ref: npm-trigger-binding
       template:
-        ref: build-and-push-trigger-template
+        ref: npm-trigger-template
 
