--- a/triggers/npm/event-listner.yaml
+++ b/triggers/npm/event-listner.yaml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1beta1
 kind: EventListener
 metadata:
-  name: github-webhook-listener
+  name: npm-webhook-listener
 spec:
   serviceAccountName: pipeline
   triggers:
