--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -43,7 +43,7 @@ spec:
         - name: output
           workspace: shared-workspace
         - name: auth
-          mountPath: /workspace/auth
+          workspace: git-auth-workspace
 
     # 2. Build the application using Maven after the repo is cloned
     - name: build-app
