--- a/pipelines/springboot/pipeline-auth.yaml
+++ b/pipelines/springboot/pipeline-auth.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: build-and-push-pipeline
+  name: build-and-push-pipeline-git-auth
   # Adjust the namespace as needed
 spec:
   params:
