--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -154,7 +154,10 @@ spec:
               git config user.email "mramadan83@gmail.com"
               git add $(params.repo-name)/deployment.yaml
               git commit -m "Update deployment image to $IMAGE"
-              git push origin main
+              git status
+              git branch -a
+              git checkout -b main
+              git push -u origin main
     
           # Step 3: Push changes
           # Ensure the secret with credentials is mounted and git remote is authenticated
