--- a/pipelines/springboot/pipeline-resolver.yaml
+++ b/pipelines/springboot/pipeline-resolver.yaml
@@ -32,8 +32,14 @@ spec:
     # 1. Clone the source code repository
     - name: clone-repo
       taskRef:
-        kind: ClusterTask
-        name: git-clone
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: git-clone
+          - name: namespace
+            value: openshift-pipelines 
       params:
         - name: url
           value: "$(params.git-url)"
@@ -50,8 +56,14 @@ spec:
       runAfter:
         - clone-repo
       taskRef:
-        kind: ClusterTask
-        name: maven
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: maven
+          - name: namespace
+            value: openshift-pipelines 
       params:
         - name: GOALS
           value:
@@ -68,8 +80,14 @@ spec:
       runAfter:
         - build-app
       taskRef:
-        kind: ClusterTask
-        name: buildah
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: buildah
+          - name: namespace
+            value: openshift-pipelines 
       params:
         - name: IMAGE
           value: "quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
@@ -90,8 +108,14 @@ spec:
       runAfter:
         - build-image
       taskRef:
-        kind: ClusterTask
-        name: buildah
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: buildah
+          - name: namespace
+            value: openshift-pipelines 
       params:
         - name: IMAGE
           value: "quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
@@ -114,8 +138,14 @@ spec:
       runAfter:
         - push-image
       taskRef:
-        kind: ClusterTask
-        name: git-clone
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: name
+            value: git-clone
+          - name: namespace
+            value: openshift-pipelines 
       params:
         - name: url
           value: "$(params.infra-git-url)"
