--- a/pipelines/springboot/pipeline-resolver.yaml
+++ b/pipelines/springboot/pipeline-resolver.yaml
@@ -39,9 +39,9 @@ spec:
           - name: namespace
             value: openshift-pipelines 
       params:
-        - name: url
+        - name: URL
           value: "$(params.git-url)"
-        - name: revision
+        - name: REVISION
           value: "$(params.git-revision)"
       workspaces:
         - name: output
