--- a/pipelines/springboot/pipeline-resolver.yaml
+++ b/pipelines/springboot/pipeline-resolver.yaml
@@ -86,7 +86,7 @@ spec:
             value: openshift-pipelines
       params:
         - name: IMAGE
-          value: "quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
+          value: "quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.COMMIT)"
         - name: STORAGE
           value: "overlay"
         - name: TLSVERIFY
@@ -114,7 +114,7 @@ spec:
             value: openshift-pipelines
       params:
         - name: IMAGE
-          value: "quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
+          value: "quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.COMMIT)"
         - name: STORAGE
           value: "overlay"
         - name: TLSVERIFY
@@ -122,7 +122,7 @@ spec:
         - name: FORMAT
           value: "oci"
         - name: DESTINATION
-          value: "docker://quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
+          value: "docker://quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.COMMIT)"
         - name: AUTHFILE
           value: "/tekton/credentials/.dockerconfigjson"
       workspaces:
@@ -165,7 +165,7 @@ spec:
             script: |
               #!/usr/bin/env sh
               set -e
-              IMAGE="quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
+              IMAGE="quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.COMMIT)"
               echo "Updating deployment.yaml with image: $IMAGE"
               # Assuming there's a line in deployment.yaml like:
               # image: quay.io/mramadan83/spring-boot-hello-world:latest
@@ -262,7 +262,7 @@ spec:
             script: |
               #!/usr/bin/env sh
               set -e
-              IMAGE="quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
+              IMAGE="quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.COMMIT)"
               DEPLOYMENT="$(params.repo-name)"
               NAMESPACE="$(params.target-namespace)"
               oc set image deployment/$DEPLOYMENT *=${IMAGE} -n $NAMESPACE
