--- a/pipelines/springboot/pipeline-resolver.yaml
+++ b/pipelines/springboot/pipeline-resolver.yaml
@@ -183,17 +183,29 @@ spec:
               git config --global --add safe.directory /workspace/infra-workspace
               git config user.name "mramadan83"
               git config user.email "mramadan83@gmail.com"
-              git add $(params.repo-name)/deployment.yaml
+              echo "Checking out to main branch..."
+              git checkout -B main
+              
+              # Debugging: Ensure file exists and is updated
+              echo "Debugging deployment.yaml:"
+              ls -l /workspace/infra-workspace/$(params.repo-name)/deployment.yaml
+              cat /workspace/infra-workspace/$(params.repo-name)/deployment.yaml
+              
+              # Add changes and commit if there are updates
+              echo "Staging changes..."
+              git add /workspace/infra-workspace/$(params.repo-name)/deployment.yaml
+              
               if git diff-index --quiet HEAD --; then
-                echo "No changes to commit."
-              else                
-                echo "Commit changes."
+                echo "No changes to commit. Skipping commit."
+              else
+                echo "Committing changes..."
                 git commit -m "Update deployment image to $IMAGE"
                 git status
-                git branch -a
-                git checkout -b main
-                git push -u origin main
               fi
+              
+              # Push changes
+              echo "Pushing changes to remote repository..."
+              git push -u origin main
     
           # Step 3: Push changes
           # Ensure the secret with credentials is mounted and git remote is authenticated
